--- a/index.html
+++ b/index.html
@@ -436,16 +436,22 @@
                     role: 'Founder',
                     link: '#',
                     color: '#FF6B6B',
-                    category: 'nonprofit'
                 },
                 {
                     id: 2,
                     name: 'Sandbox',
                     description: 'Inclusivity through sport.',
+                    role: 'Visionary',
+                    link: 'https://sites.google.com/view/sandboxdeck/home',
+                    color: '#4ECDC4',
+                },
+                {
+                    id: 12,
+                    name: 'The Sandlot',
+                    description: 'Inclusivity through sport. Sponsorship opportunities available.',
                     role: 'Board Member',
                     link: 'https://thesandlot.org/',
-                    color: '#4ECDC4',
-                    category: 'nonprofit'
+                    color: '#5DADE2',
                 },
                 {
                     id: 3,
@@ -454,7 +460,6 @@
                     role: 'Coach',
                     link: 'https://www.dallasjuniorwheelchairmavericks.org/',
                     color: '#FFD166',
-                    category: 'nonprofit'
                 },
                 {
                     id: 4,
@@ -463,7 +468,6 @@
                     role: 'Head Coach',
                     link: 'https://www.facebook.com/profile.php?id=100094081574409',
                     color: '#F86624',
-                    category: 'nonprofit'
                 },
                 
                 // For Profit
@@ -473,7 +477,6 @@
                     description: 'Fantasy gift shop.',
                     link: 'https://taverncore.com',
                     color: '#662E9B',
-                    category: 'forprofit'
                 },
                 {
                     id: 6,
@@ -481,7 +484,6 @@
                     description: 'Cards, flips, and collector heat.',
                     link: '#mailday',
                     color: '#43BCCD',
-                    category: 'forprofit'
                 },
                 {
                     id: 7,
@@ -489,7 +491,6 @@
                     description: 'Coffee + beer + games.',
                     link: '#kickstarter-soon',
                     color: '#A7C957',
-                    category: 'forprofit'
                 },
                 {
                     id: 10,
@@ -498,7 +499,6 @@
                     role: 'Coach',
                     link: '#life-coaching-booking',
                     color: '#9B59B6',
-                    category: 'forprofit'
                 },
                 {
                     id: 11,
@@ -507,7 +507,6 @@
                     role: 'Dungeon Master',
                     link: '#dnd-booking',
                     color: '#E74C3C',
-                    category: 'forprofit'
                 },
                 
                 // Fun and Friends
@@ -517,7 +516,6 @@
                     description: 'My first game project',
                     link: 'https://github.com/trul3z/fishgame',
                     color: '#FC9E4F',
-                    category: 'fun'
                 },
                 {
                     id: 9,
@@ -525,7 +523,6 @@
                     description: 'My Alma Mater.',
                     link: 'https://mizzourec.missouri.edu/mizzou-wheelchair-basketball/',
                     color: '#C0B9DD',
-                    category: 'friends'
                 },
             ];
 
