--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
                 <div class="contact-info">
                     <button class="contact-btn" onclick="toggleContact()">contact me</button>
                     <div class="contact-details" id="contactDetails">
-                        <p>📧 tyler@example.com</p>
-                        <p>📱 (555) 123-4567</p>
+                        <p>📧 tyler@tylermalone.com</p>
+                        <p>📱 (972) 979-5018</p>
                     </div>
                 </div>
             </div>
