--- a/index.html
+++ b/index.html
@@ -434,8 +434,9 @@
                     name: 'TMIRF',
                     description: 'We turn dollars into dreams.',
                     role: 'Founder',
-                    link: '#',
+                    link: 'https://thisisreal.org',
                     color: '#FF6B6B',
+                    category: 'nonprofit'
                 },
                 {
                     id: 2,
@@ -444,6 +445,7 @@
                     role: 'Visionary',
                     link: 'https://sites.google.com/view/sandboxdeck/home',
                     color: '#4ECDC4',
+                    category: 'nonprofit'
                 },
                 {
                     id: 12,
@@ -452,6 +454,7 @@
                     role: 'Board Member',
                     link: 'https://thesandlot.org/',
                     color: '#5DADE2',
+                    category: 'nonprofit'
                 },
                 {
                     id: 3,
@@ -460,6 +463,7 @@
                     role: 'Coach',
                     link: 'https://www.dallasjuniorwheelchairmavericks.org/',
                     color: '#FFD166',
+                    category: 'nonprofit'
                 },
                 {
                     id: 4,
@@ -468,6 +472,7 @@
                     role: 'Head Coach',
                     link: 'https://www.facebook.com/profile.php?id=100094081574409',
                     color: '#F86624',
+                    category: 'nonprofit'
                 },
                 
                 // For Profit
@@ -477,6 +482,7 @@
                     description: 'Fantasy gift shop.',
                     link: 'https://taverncore.com',
                     color: '#662E9B',
+                    category: 'forprofit'
                 },
                 {
                     id: 6,
@@ -484,6 +490,7 @@
                     description: 'Cards, flips, and collector heat.',
                     link: '#mailday',
                     color: '#43BCCD',
+                    category: 'forprofit'
                 },
                 {
                     id: 7,
@@ -491,22 +498,25 @@
                     description: 'Coffee + beer + games.',
                     link: '#kickstarter-soon',
                     color: '#A7C957',
+                    category: 'forprofit'
                 },
                 {
                     id: 10,
                     name: 'Personalized Coaching',
                     description: 'Personal development and goal achievement.',
                     role: 'Coach',
-                    link: '#life-coaching-booking',
+                    link: 'https://bethebestyou.site',
                     color: '#9B59B6',
+                    category: 'forprofit'
                 },
                 {
                     id: 11,
                     name: 'D&D',
                     description: 'Play D&D with me! 15+ years of experience.',
                     role: 'Dungeon Master',
-                    link: '#dnd-booking',
+                    link: 'https://bethebestyou.site',
                     color: '#E74C3C',
+                    category: 'forprofit'
                 },
                 
                 // Fun and Friends
@@ -516,6 +526,7 @@
                     description: 'My first game project',
                     link: 'https://github.com/trul3z/fishgame',
                     color: '#FC9E4F',
+                    category: 'fun'
                 },
                 {
                     id: 9,
@@ -523,6 +534,7 @@
                     description: 'My Alma Mater.',
                     link: 'https://mizzourec.missouri.edu/mizzou-wheelchair-basketball/',
                     color: '#C0B9DD',
+                    category: 'friends'
                 },
             ];
 
