--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     name: 'TMIRF',
                     description: 'We turn dollars into dreams.',
                     role: 'Founder',
-                    link: 'https://thisisreal.org',
+                    link: 'https://form.jotform.com/252166338038054',
                     color: '#FF6B6B',
                     category: 'nonprofit'
                 },
@@ -451,7 +451,7 @@
                     name: 'Sandbox',
                     description: 'Inclusivity through sport.',
                     role: 'Visionary',
-                    link: 'https://sites.google.com/view/sandboxdeck/home',
+                    link: 'https://thesandlot.org/future-initiatives',
                     color: '#4ECDC4',
                     category: 'nonprofit'
                 },
@@ -475,10 +475,10 @@
                 },
                 {
                     id: 4,
-                    name: 'Texas Outlaws',
+                    name: 'Texas Buckets',
                     description: 'D2 wheelchair basketball.',
                     role: 'Head Coach',
-                    link: 'https://www.facebook.com/profile.php?id=100094081574409',
+                    link: 'thisisreal.org',
                     color: '#F86624',
                     category: 'nonprofit'
                 },
@@ -496,7 +496,7 @@
                     id: 6,
                     name: 'Mail Day',
                     description: 'Cards, flips, and collector heat.',
-                    link: '#mailday',
+                    link: 'yugioh.tcgplayer.com',
                     color: '#43BCCD',
                     category: 'forprofit'
                 },
