--- a/index.html
+++ b/index.html
@@ -495,15 +495,15 @@
                 {
                     id: 6,
                     name: 'Mail Day',
-                    description: 'Cards, flips, and collector heat.',
-                    link: 'yugioh.tcgplayer.com',
+                    description: 'Buy my cards.',
+                    link: 'https://www.tcgplayer.com/',
                     color: '#43BCCD',
                     category: 'forprofit'
                 },
                 {
                     id: 7,
                     name: 'Board & Brew',
-                    description: 'Coffee + beer + games.',
+                    description: 'Coffee + beer + games. Kickstarter coming soon',
                     link: '#kickstarter-soon',
                     color: '#A7C957',
                     category: 'forprofit'
