--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                     name: 'Personalized Coaching',
                     description: 'Personal development and goal achievement.',
                     role: 'Coach',
-                    link: 'https://bethebestyou.site',
+                    link: 'https://forms.gle/7Yq31P9fCHq42QrU6',
                     color: '#9B59B6',
                     category: 'forprofit'
                 },
@@ -531,7 +531,7 @@
                 {
                     id: 8,
                     name: 'Fishgame',
-                    description: 'My first game project',
+                    description: 'My first game',
                     link: 'https://github.com/trul3z/fishgame',
                     color: '#FC9E4F',
                     category: 'fun'
@@ -544,6 +544,22 @@
                     color: '#C0B9DD',
                     category: 'friends'
                 },
+                {
+                    id: 13,
+                    name: 'Area Wide Services',
+                    description: 'Residential and commercial HVAC services.',
+                    link: 'https://www.areawideservices.com/',
+                    color: '#F39C12',
+                    category: 'friends'
+                },
+                {
+                    id: 14,
+                    name: 'Plainsman Tire Company',
+                    description: 'Wholesale Tires.',
+                    link: 'https://ptcwholesale.com/Wholesale/login/',
+                    color: '#E67E22',
+                    category: 'friends'
+                }
             ];
 
             // Create nodes for each category
