--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                     category: 'nonprofit'
                 },
                 {
-                    id: 12,
+                    id: 3,
                     name: 'The Sandlot',
                     description: 'Inclusivity through sport. Sponsorship opportunities available.',
                     role: 'Board Member',
@@ -465,7 +465,7 @@
                     category: 'nonprofit'
                 },
                 {
-                    id: 3,
+                    id: 4,
                     name: 'JR Mavs',
                     description: 'DFW\'s youth wheelchair basketball program.',
                     role: 'Coach',
@@ -474,7 +474,7 @@
                     category: 'nonprofit'
                 },
                 {
-                    id: 4,
+                    id: 5,
                     name: 'Texas Buckets',
                     description: 'D2 wheelchair basketball.',
                     role: 'Head Coach',
@@ -485,7 +485,16 @@
                 
                 // For Profit
                 {
-                    id: 5,
+                    id: 6,
+                    name: 'Area Wide Services',
+                    description: 'Residential and commercial HVAC services.',
+                    role: 'Director of Operations',
+                    link: 'https://www.areawideservices.com/',
+                    color: '#F39C12',
+                    category: 'forprofit'
+                },
+                {
+                    id: 7,
                     name: 'Taverncore',
                     description: 'Fantasy gift shop.',
                     link: 'https://taverncore.com',
@@ -493,7 +502,7 @@
                     category: 'forprofit'
                 },
                 {
-                    id: 6,
+                    id: 8,
                     name: 'Mail Day',
                     description: 'Buy my cards.',
                     link: 'https://www.tcgplayer.com/',
@@ -501,7 +510,7 @@
                     category: 'forprofit'
                 },
                 {
-                    id: 7,
+                    id: 9,
                     name: 'Board & Brew',
                     description: 'Coffee + beer + games. Kickstarter coming soon',
                     link: '#kickstarter-soon',
@@ -529,7 +538,7 @@
                 
                 // Fun and Friends
                 {
-                    id: 8,
+                    id: 12,
                     name: 'Fishgame',
                     description: 'My first game',
                     link: 'https://github.com/trul3z/fishgame',
@@ -537,21 +546,14 @@
                     category: 'fun'
                 },
                 {
-                    id: 9,
+                    id: 13,
                     name: 'Mizzou Wheelchair Basketball',
                     description: 'My Alma Mater.',
                     link: 'https://mizzourec.missouri.edu/mizzou-wheelchair-basketball/',
                     color: '#C0B9DD',
                     category: 'friends'
                 },
-                {
-                    id: 13,
-                    name: 'Area Wide Services',
-                    description: 'Residential and commercial HVAC services.',
-                    link: 'https://www.areawideservices.com/',
-                    color: '#F39C12',
-                    category: 'friends'
-                },
+
                 {
                     id: 14,
                     name: 'Plainsman Tire Company',
